Mis à jour la structure de l'introduction

--- a/Template memoire maitrise - Polytechnique MTL/5-Introduction.tex
+++ b/Template memoire maitrise - Polytechnique MTL/5-Introduction.tex
@@ -16,14 +16,19 @@ L'objet RSVP \texttt{SENDER\_TEMPLATE}.\\
 %Nom d'un auteur: \citeauthor{RFC_IPv4}.\\
 Une architecture 32~bits.\\
 %%
-%%  CONCEPTS DE BASE / BASIC CONCEPTS
+%% FG  LE TEMPLATE DE BASE DE POLYTECHNIQUE FAIT USAGE DE BEAUCOUP DE
+%% NIVEAUX DE SOUS-SECTIONS. ALLEZ-Y AVEC MODÉRATION. SURTOUT EN
+%% CHAPITRE D'INTRODUCTION, IL N'EST PAS NÉCESSAIRE DE DÉPASSER UN OU
+%% DEUX NIVEAUX DE SOUS-SECTIONS.
 %%
-\section{Définitions et concepts de base}  % environ 2-3 pages
-\begin{flushleft}
-1\iere{} utilisation d'un acronyme: \ac{IETF}.\\
-2\ieme{} utilisation d'un acronyme: \ac{IETF}.\\
-Acronyme au long: \acl{IETF}.\\
-\end{flushleft}
+
+
+%%
+%% CONTEXTE ET PROBLEMATIQUE
+%%
+\section{Contexte et problématique}  % environ 1 à 3 pages
+Le contexte de la recherche est présenté dans cette section. Au CÉGEP, on appelait ça le sujet amené et le sujet posé. 
+
 
 \subsection{Une sous-section}
 Un URL: \href{http://www.polymtl.ca}{École Polytechnique de Montréal}.
@@ -42,12 +47,9 @@ quatre paramètres importants \cite{Fraas2010} ou:
 Une citation entre parenthèses \cite{Chen2009}.
 ou des citations entre parenthèses \cite{Haist2014,Senjian2015,Madani2010}.
 
-\clearpage
 
-%%
-%% ELEMENTS DE LA PROBLEMATIQUE
-%%
-\section{Éléments de la problématique}  % environ 3 pages
+
+
 La description de \mbox{l'en-tête} commun de RSVP est détaillée ci-dessous:\\
 \begin{tabular}{p{1in}p{4.5in}}
 &\\ % Ligne vide
@@ -121,11 +123,11 @@ Plage & Valeurs & Règle d'assignation\\\hline
 
 
 %%
-%% OBJECTIFS DE RECHERCHE / RESEARCH OBJECTIVES
+%% Motivation
 %%
-\section{Objectifs de recherche}  % 0.5 page
-Les objectifs de la recherche sont de concevoir un algorithme $O(n)$.
-
+\section{Motivation}  % Environ 2 à 3 page
+Pourquoi faut-il faire ce projet ? Y a-t-il des applications industrielles qui motivent ce travail ou s'agit-il de recherche fondamentale motivée par la curiosité ?
+Citez des articles de recherche pour appuyer ce que vous avancez.
 
 %%
 %% PLAN DU MEMOIRE / THESIS OUTLINE
